@@ -1,3 +1,8 @@
+2012-12-26  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-cite.el (gnus-article-hide-citation-maybe): Leave an expansion
+	button to mark the hidden citations (bug#9395).
+
 2012-12-25  Leo Liu  <sdl.web@gmail.com>
 
 	* plstore.el (plstore-passphrase-callback-function): Fix error when
